# gr-tacmac

./: .gitignore  .zenodo.json  0001-device-Fix-correct-multi-USRP-hashing.patch  CMakeLists.txt  INSTALL.md  MANIFEST.md  README.md  demo.qss  docker-compose.yml
apps/: CMakeLists.txt
docs/: CMakeLists.txt
examples/: .gitignore  gfdm_loop_demo.grc  gfdm_ota_demo_nogui.grc  gfdm_ota_demo_qtgui.grc  hier_gfdm_2rx_lower_phy_receiver.grc  hier_gfdm_lower_phy_receiver.grc  hier_gfdm_ota_demo.grc  hier_gfdm_phy_receiver.grc  hier_gfdm_phy_transmitter.grc  hier_phy_transmitter_flowgraph.grc  hier_udp_interface_2port.grc  run_demo_nogui_autoconfigured.py  run_demo_qtgui_autoconfigured.py
grc/: CMakeLists.txt  tacmac_elasticsearch_connector.block.yml  tacmac_lower_phy_receiver.block.yml  tacmac_mac_controller.block.yml  tacmac_periodic_time_tag_cc.block.yml  tacmac_phy_layer.block.yml  tacmac_phy_receiver.block.yml  tacmac_phy_transmitter.block.yml  tacmac_status_collector.block.yml  tacmac_tag_to_stream_value.block.yml  tacmac_tags_to_msg_dict.block.yml  tacmac_udp_interface.block.yml  tacmac_upper_phy_receiver.block.yml  (+1 more)
lib/: CMakeLists.txt  (+11 more)
python/bindings/: CMakeLists.txt  bind_oot_file.py  mac_controller_python.cc  periodic_time_tag_cc_python.cc  python_bindings.cc  status_collector_python.cc  tag_to_stream_value_python.cc  tags_to_msg_dict_python.cc
python/bindings/docstrings/: mac_controller_pydoc_template.h  periodic_time_tag_cc_pydoc_template.h  status_collector_pydoc_template.h  tag_to_stream_value_pydoc_template.h  tags_to_msg_dict_pydoc_template.h
(+57 files in other folders)
